update button for calendar page on dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,17 @@
       margin-top: 10px;
     }
 
+    /* .logout-btn {
+      margin-top: 20px;
+      padding: 10px 25px;
+      font-size: 1rem;
+      background-color: white;
+      color: #333;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: 0.3s;
+    } */
     .logout-btn {
       margin-top: 20px;
       padding: 10px 25px;
@@ -37,6 +48,9 @@
       border-radius: 25px;
       cursor: pointer;
       transition: 0.3s;
+      width: 180px;
+      /* ✅ Set a fixed width */
+      text-align: center;
     }
 
     .logout-btn:hover {
@@ -51,6 +65,7 @@
   <h1>Welcome to GymBuddy!</h1>
   <div class="user-info" id="userEmail">Loading user info...</div>
   <button class="logout-btn" onclick="goToProfile()">My Profile</button>
+  <button class="logout-btn" onclick="goToCalendar()">My Calendar</button>
   <button class="logout-btn" onclick="logout()">Log Out</button>
 
 
@@ -96,6 +111,10 @@
 
     function goToProfile() {
       window.location.href = "profile.html";
+    }
+
+    function goToCalendar() {
+      window.location.href = "calendar.html";
     }
 
     fetchUserData();
