Added edit and delete for schedule. Added enter shortcut for sign in and register

--- a/calendar.html
+++ b/calendar.html
@@ -92,6 +92,37 @@
         eventResize: async function (info) {
           await updateEventTime(info.event);
         },
+        
+        eventClick: function (info) {
+          const modal = document.getElementById('editModal');
+          const input = document.getElementById('editTitleInput');
+          const updateBtn = document.getElementById('updateEventBtn');
+          const deleteBtn = document.getElementById('deleteEventBtn');
+
+          input.value = info.event.title;
+          modal.style.display = 'block';
+
+          // Clear any previous click handlers
+          updateBtn.onclick = null;
+          deleteBtn.onclick = null;
+
+          updateBtn.onclick = () => {
+            const newTitle = input.value.trim();
+            if (newTitle) {
+              info.event.setProp('title', newTitle);
+              updateEventTime(info.event, newTitle);
+            }
+            modal.style.display = 'none';
+          };
+
+          deleteBtn.onclick = () => {
+            const confirmDelete = confirm("Are you sure you want to delete this event?");
+            if (confirmDelete) {
+              deleteEvent(info.event);
+            }
+            modal.style.display = 'none';
+          };
+        },
 
 
         // Update tooltip to use local time
@@ -177,7 +208,7 @@
 
       calendar.render();
 
-      async function updateEventTime(event) {
+      async function updateEventTime(event, newTitle = null) {
         const token = localStorage.getItem("token");
 
         try {
@@ -188,6 +219,7 @@
               "Authorization": `Bearer ${token}`
             },
             body: JSON.stringify({
+              title: newTitle ?? event.title,
               start: event.start.toISOString(),
               end: event.end.toISOString()
             })
@@ -202,9 +234,71 @@
         }
       }
 
+      async function deleteEvent(event) {
+        const token = localStorage.getItem("token");
+
+        try {
+          const res = await fetch(`http://localhost:5000/api/calendar/events/${event.id}`, {
+            method: "DELETE",
+            headers: {
+              "Authorization": `Bearer ${token}`
+            }
+          });
+
+          if (!res.ok) throw new Error("Failed to delete event");
+
+          event.remove(); // remove from calendar
+          console.log("🗑️ Event deleted successfully");
+        } catch (err) {
+          alert("❌ Could not delete event: " + err.message);
+        }
+      }
+      // Handle modal close logic
+      document.getElementById("closeModalBtn").onclick = () => {
+        document.getElementById("editModal").style.display = "none";
+      };
+
+      document.getElementById("editModal").onclick = (e) => {
+        // Close only if clicking on the background, not inside modal content
+        if (e.target.id === "editModal") {
+          document.getElementById("editModal").style.display = "none";
+        }
+      };
+
+
+
     });
 
   </script>
+  <!-- <div id="editModal" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%);
+  background:white; color:black; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); z-index:1000;">
+    <h3>Edit Event</h3>
+    <input type="text" id="editTitleInput" style="width:100%; padding:8px; margin-top:10px;" />
+    <div style="margin-top: 15px; text-align:right;">
+      <button id="updateEventBtn" style="padding:8px 16px; margin-right:10px;">Update</button>
+      <button id="deleteEventBtn" style="padding:8px 16px; background:red; color:white;">Delete</button>
+    </div>
+  </div> -->
+  <!-- 🔄 UPDATED MODAL HTML -->
+  <div id="editModal"
+    style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); z-index:1000;">
+    <div id="modalContent"
+      style="position:relative; top:50%; left:50%; transform:translate(-50%, -50%);
+    background:white; color:black; padding:20px; border-radius:10px; box-shadow:0 0 20px rgba(0,0,0,0.5); width:300px;">
+
+      <span id="closeModalBtn"
+        style="position:absolute; top:8px; right:12px; font-size:20px; cursor:pointer;">&times;</span>
+
+      <h3>Edit Event</h3>
+      <input type="text" id="editTitleInput" style="width:100%; padding:8px; margin-top:10px;" />
+      <div style="margin-top: 15px; text-align:right;">
+        <button id="updateEventBtn" style="padding:8px 16px; margin-right:10px;">Update</button>
+        <button id="deleteEventBtn" style="padding:8px 16px; background:red; color:white;">Delete</button>
+      </div>
+    </div>
+  </div>
+
+
 </body>
 
 </html>
