--- a/profile.html
+++ b/profile.html
@@ -496,8 +496,8 @@
       });
 
       openPreferenceBtn.addEventListener("click", () => {
-        prefillPreferencesFromUser();              // ✅ Use our new function
-        preferenceModal.style.display = "block";  // ✅ Open modal
+        prefillPreferencesFromUser();              
+        preferenceModal.style.display = "block";  
       });
 
 
