changed background picture and edit about page

--- a/about.html
+++ b/about.html
@@ -57,8 +57,11 @@
             <li>Create and manage accounts</li>
             <li>Log in securely</li>
             <li>Select gym session times using an interactive calendar</li>
-            <li>Modify their personal profiles</li>
+            <li>Modify their personal profiles information/preferences</li>
             <li>Share availability with other users</li>
+            <li>Intuitive matching system based on preferences</li>
+            <li>Have real time chat with other gym buddies</li>
+            <li>Friend management with your buddies</li>
         </ul>
         <p>
             The main goal of GymBuddy is to promote <strong>collaboration, motivation, and a sense of community</strong>
