update prevent terms&condition opens in new tab

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="two-center">
-                    <label><a href="terms.html" target="_blank">Terms & conditions</a></label>
+                    <label><a href="terms.html">Terms & conditions</a></label>
                 </div>
             </div>
         </div>
